--- a/budget-calculator/.eslintrc.json
+++ b/budget-calculator/.eslintrc.json
@@ -9,6 +9,9 @@
         "plugin:@typescript-eslint/recommended",
         "plugin:prettier/recommended"
     ],
+    "globals": {
+      "JSX": true
+    },
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
