--- a/budget-calculator/package.json
+++ b/budget-calculator/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
     "react-sticky-box": "^0.9.3",
+    "rxjs": "^6.6.3",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
   },
